# void-wars

./: CMakeLists.txt  shell.html
.github/workflows/: deploy.yml
include/: bullets.h  contants.h  enemies.h  explosions.h  gameobject.h  player.h  screens.h  utils.h
src/: bullets.c  enemies.c  explosions.c  gameobject.c  main.c  player.c  screens.c  utils.c
